2007-08-22 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSFontPanel.h: Add MacOSX 10.3 constants.

2007-08-21 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSAttributedString.m (-fixFontAttributeInRange:): Ignore
	characters below 31. 
	Patch by Yen-Ju Chen <yjchenx@gmail.com>

2007-08-20 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSWindow.m (-sendEvent:): For the left mouse down case
	make sure that the affected view is still valid after activating
	the application and making the window key.

2007-08-20 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSInputManager.m (-handleKeyboardEvents:client:): Set the
	isFunctionKey boolean correctly. This was needed as the
	NSFunctionKeyMask value doesn't fit in the first byte.

2007-08-19 21:18-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSController.m
	* Source/NSObjectController.m: Remove calls to debug method.

2007-08-19 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSButton.m ([performKeyEquivalent:]): Only test for modal
	window when it isn't nil.

2007-08-16 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSFontManager.h,
	* Source/NSFontManager.m: Add MacOSX 10.3 methods and constants.
	* Source/NSWindow.m (-setHasShadow:): Add backend call.

2007-08-14 23:24-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSManagedObjectContext.h
	* Source/NSManagedObjectContext.m: Add managed object context.

2007-08-14 23:22-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/AppKit/NSController.h: Added new ivar.
	* Headers/AppKit/NSObjectController.h: Added new ivar.
	* Source/GNUmakefile: Added NSManagedObjectContext.[hm].
	* Source/NSController.m: Add keys for nib encoding/decoding.
	* Source/NSObjectController.m: Add keys for nib encoding/decoding.

2007-08-15 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Additions/GNUstepGUI/GSDisplayServer.h (-setShadow::),
	* Source/GSDisplayServer.m (-setShadow::): 
	Add new method for shadow.

2007-08-12 Fred Kiefer <FredKiefer@gmx.de>
